--- a/npkpir_23/web/wspolny/sub/layoutFakturaGuestKontrahenci/west.xhtml
+++ b/npkpir_23/web/wspolny/sub/layoutFakturaGuestKontrahenci/west.xhtml
@@ -27,6 +27,7 @@
                             <p:menuitem value="#{mgs.fakturyustawienia}"  outcome="gfakturaFakturaUstawienia" icon="ui-icon-circle-arrow-e" />
                             <p:menuitem value="#{mgs.płatności}"  outcome="gfakturaFakturaPlatnosci" icon="ui-icon-circle-arrow-e" />
                             <p:menuitem value="#{mgs.kontrahenci}"  outcome="gfakturaFakturaKontrahenci" icon="ui-icon-circle-arrow-e"/>
+                            <p:menuitem value="#{mgs.slowniki}"  outcome="GuestFakturaSlownik" icon="ui-icon-circle-arrow-e"/>
                         </p:menu>
                     
                         <p:commandButton id="wyloguj" value="#{mgs.wyloguj}" action="#{logowanie.logout()}" style="margin-left: 25%; margin-top: 10px;"/>
