--- a/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_rachunek.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_rachunek.xhtml
@@ -27,7 +27,7 @@
                         <p:watermark for="nazwa" value="nazwa towaru lub usługi" />
                         <p:ajax global="false" event="focus" onstart="sprawdzczynazwaskroconafakturaniejestshown();"/>
                     </p:inputText>
-                    <p:selectOneMenu value="#{row.nazwa}" endered="#{fakturaslownikView.lista ne null}" style="width: 340px;"
+                    <p:selectOneMenu value="#{row.nazwa}" rendered="#{fakturaslownikView.lista ne null}" style="width: 340px;"
                                      editable="true" filter="true" filterMatchMode="contains" >
                         <f:selectItem itemLabel="wybierz" itemValue="" noSelectionOption="true"/>
                         <f:selectItems value="#{fakturaslownikView.listawybor}" var="loop" itemLabel="#{loop}" itemValue="#{loop}"/>
