--- a/npkpir_23/web/kadrowa/sub/dochoddladra.xhtml
+++ b/npkpir_23/web/kadrowa/sub/dochoddladra.xhtml
@@ -338,7 +338,7 @@
                             <p:panelGrid columns="4">
                                 <p:selectOneListbox id="podatnikWpisu" value="#{dochodDlaDRAView.podatnik}" style="width: 350px; height: 250px;" converter="#{podatConv}" filter="true" filterMatchMode="contains">
                                     <f:selectItems value="#{podatnikWyborView.listaPodatnikowNoFK}" var="p" itemLabel="#{p.nazwapelnaPDF}" itemValue="#{p}"/>
-                                    <p:ajax event="change" partialSubmit="true"  listener="#{dochodDlaDRAView.pobierzrokByNip()}" update="akordeon:formrok"/>
+                                    <p:ajax event="change" partialSubmit="true"  listener="#{dochodDlaDRAView.pobierzrokByNip()}" update="akordeon:formrok:datalist akordeon:formrok:rem"/>
                                 </p:selectOneListbox>
                                 <p:outputLabel for="miesiacWpisu" value="miesiąc graniczny"/>
                                 <p:selectOneMenu id="miesiacWpisu" value="#{dochodDlaDRAView.maxmc}" style="width: 70px;" label="miesiąc graniczny" title="miesiąc graniczny">
@@ -349,8 +349,8 @@
                                 <p:commandButton id="przeliczbutton1a" value="pobierz" actionListener="#{dochodDlaDRAView.przeliczRok()}"  style="width: 120px;margin-left: 20px;" update="akordeon:formrok"/>
                             </p:panelGrid>
                             <p:dataTable value="#{dochodDlaDRAView.wierszerok}" var="item2" style="width: 1600px;padding: 20px;max-height: 700px;overflow-y: scroll" reflow="true"
-                                             sortBy="#{item2.mc}"
-                                             emptyMessage="nie pobrano danych" id="wykazschem2" rowKey="#{item2.mc}" rowIndexVar="yndex1"
+                                         sortBy="#{item2.mc}" id="datalist"
+                                             emptyMessage="nie pobrano danych"  rowKey="#{item2.mc}" rowIndexVar="yndex1"
                                              >
                                     <p:column width="30" exportable="false" sortBy="#{item2.mc}">
                                         <f:facet name="header">
@@ -453,6 +453,16 @@
                                         </h:outputText>
                                     </p:column>
                                 </p:dataTable>
+                            <p:outputPanel style="padding: 10px;" id="rem">
+                                <p:panelGrid columns="2">
+                                    <h:outputText value="remanent początkowy:"/>
+                                    <bcf:outputpl value="#{dochodDlaDRAView.remanentpoczatkowy}"/>
+                                    <h:outputText value="remanent końcowy:"/>
+                                    <bcf:outputpl value="#{dochodDlaDRAView.remanentkoncowy}"/>
+                                    <h:outputText value="różnica remanentów:"/>
+                                    <bcf:outputpl value="#{dochodDlaDRAView.remannetroznica}"/>
+                                </p:panelGrid>
+                            </p:outputPanel>
                             <p:messages><p:autoUpdate/></p:messages>
                         </h:form>
                     </f:view>
