--- a/npkpir_23/web/manager/sub/danewszystkichpodatnikow.xhtml
+++ b/npkpir_23/web/manager/sub/danewszystkichpodatnikow.xhtml
@@ -17,6 +17,8 @@
         <p:commandButton value="drukuj" actionListener="#{podatnicyView.drukujwszystkich}" style="width: 120px; margin: 10px;"/>
     <p:dataTable value="#{podatnicyView.podatnicy}" var="podatnik" sortBy="#{podatnik.printnazwa}" rowIndexVar="index" style="width: 1880px;"
                  rowKey="#{podatnik.id}" rowSelectMode="add"
+                 paginator="true" paginatorAlwaysVisible="true" rows="24"
+                paginatorTemplate="{FirstPageLink} {PageLinks} {LastPageLink} {RowsPerPageDropdown}" 
                  selection="#{podatnicyView.wybranipodatnicy}">
         <f:facet name="header">
             <h:outputText value="podatnicy"/>
