--- a/npkpir_23/web/wspolny/sub/faktura/faktura_stworz.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_stworz.xhtml
@@ -141,6 +141,7 @@
                                                              $(this).addClass('ui-state-default');" >
                                 <f:selectItem itemLabel="#{mgs.przelew}" itemValue="przelew"/>
                                 <f:selectItem itemLabel="#{mgs.gotówka}" itemValue="gotówka"/>
+                                <f:selectItem itemLabel="karta płatnicza" itemValue="karta płatnicza"/>
                             </h:selectOneMenu>
                             <h:outputLabel value="już zapłacono: " />
                             <p:selectBooleanCheckbox value="#{fakturaView.selected.zaplacona}"/>
