--- a/npkpir_23/web/kadrowa/sub/dochoddladra.xhtml
+++ b/npkpir_23/web/kadrowa/sub/dochoddladra.xhtml
@@ -457,12 +457,12 @@
                                 <p:panelGrid columns="2">
                                     <h:outputText value="dochód narastająco 2022:"/>
                                     <bcf:outputpl value="#{dochodDlaDRAView.rokdochod}"/>
-                                    <h:outputText value="remanent początkowy:"/>
-                                    <bcf:outputpl value="#{dochodDlaDRAView.remanentpoczatkowy}"/>
                                     <h:outputText value="remanent końcowy:"/>
+                                    <bcf:outputpl value="#{dochodDlaDRAView.remanentpoczatkowy}"/>
+                                    <h:outputText value="remanent początkowy"/>
                                     <bcf:outputpl value="#{dochodDlaDRAView.remanentkoncowy}"/>
                                     <h:outputText value="różnica remanentów:"/>
-                                    <bcf:outputpl value="#{dochodDlaDRAView.remannetroznica}"/>
+                                    <bcf:outputpl value="#{-dochodDlaDRAView.remannetroznica}"/>
                                 </p:panelGrid>
                             </p:outputPanel>
                             <p:messages><p:autoUpdate/></p:messages>
